feat: ginserver3 with RESTful style
